--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/main.js" defer></script>
-    <title><%= title %></title>
-  </head>
+  <%- include('partials/head') %>
   <body>
     <%- include('partials/header') %>
     <main class="main_content">
