--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/normalize.css" />
   <link rel="stylesheet" href="/css/reset.css" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.css?v=<%= Date.now() %>" />
   <link rel="stylesheet" href="/css/articleStyle.css" />
   <link rel="stylesheet" href="/css/components.css" />
   <script src="/js/main.js" defer></script>
