--- a/src/views/article.ejs
+++ b/src/views/article.ejs
@@ -34,7 +34,7 @@
             <div class="article_new">
               <img src="<%= news.image %>" alt="" class="article_preview-img" />
               <h1 class="article_title dark_title"><%= news.title %></h1>
-              <p class="article_text dark_text"><%= news.content %></p>
+              <p class="article_text dark_text"><%- news.content %></p>
             </div>
           </div>
         </div>
