--- a/src/views/partials/posts.ejs
+++ b/src/views/partials/posts.ejs
@@ -32,7 +32,7 @@
         >
       </h2>
       <%const content = post.content.substring(0, 455)%>
-      <p class="posts_text"><%-content%> ...</p>
+      <div class="posts_text"><%-content%> ...</div>
     </div>
   </li>
   <%});%>
