--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,7 +184,6 @@ body {
 .content_preview-img {
   min-width: 75%;
   width: 100%;
-  object-fit: fill;
 }
 
 .card_preview-img {
@@ -192,7 +191,8 @@ body {
   width: 100%;
   height: 100%;
   padding: 50px 0 0 50px;
-  background-size: cover;
+  object-fit: fill;
+  /* background-size: cover; */
   transition: background-image 0.3s ease;
   border-radius: 15px 0 0 15px;
 }
